Fix Badge Spacing

--- a/app/assets/stylesheets/common/base/user-badges.scss
+++ b/app/assets/stylesheets/common/base/user-badges.scss
@@ -8,6 +8,7 @@
   margin: 0;
   display: inline-block;
   background-color: $secondary;
+  margin-bottom: 3px;
 
   .fa {
     padding-right: 3px;
